fix all z-indexes, fix search-preview animation, fix style movie, and add initial styles for modal-movie.

--- a/src/App.css
+++ b/src/App.css
@@ -134,7 +134,7 @@ input {
 
 .search-box {
 	position: relative;
-	z-index: 5;
+	z-index: 123;
 	border: 1px solid #eaeaea;
 	height: 72px;
 	width: 620px;
@@ -177,18 +177,22 @@ input {
 }
 
 .search-preview {
-	position: relative;
-	top: -40px;
+	position: absolute;
+	/* top: -40px; */
 	width: 620px;
 	border: 1px solid #eaeaea;
 	border-radius: 10px;
 	display: flex;
 	flex-direction: column;
 	box-shadow: 0px 4px 21px 0px rgba(0, 0, 0, 13%);
-	display: none;
-	position: fixed;
+	/* position: fixed; */
 	border-radius: 10px;
 	z-index: 8;
+	opacity: 0;
+	transition: opacity 0.2s ease;
+	transition: 0.5;
+	top: 272px;
+	z-index: -1;
 }
 
 .search-preview.show {
@@ -203,6 +207,8 @@ input {
 	flex-direction: column;
 	box-shadow: 0px 10px 40px 2px rgba(49, 145, 255, 0.35);
 	background-color: white;
+	opacity: 1;
+	transition: opacity 0.2s ease;
 }
 
 .search-preview .cta h4 {
@@ -337,6 +343,8 @@ input {
 	width: 100%;
 	height: 100%;
 	cursor: pointer;
+	border-radius: 8px;
+	/* z-index: 0; */
 }
 
 /* .container .movies-list .movie:nth-last-child(2) {
@@ -352,13 +360,16 @@ input {
 	height: 100%;
 	max-height: 400px;
 	border-radius: 8px;
-	/* z-index: 2; */
+	z-index: 2;
+	cursor: pointer;
 }
 
 .container .movies-list .movie .title {
 	font-size: 18px;
 	font-weight: normal;
 	margin: 0;
+	z-index: 2;
+	cursor: pointer;
 }
 
 .pagination {
@@ -414,4 +425,54 @@ input {
 	/* background-color: #b1b0b0;
 	color: white; */
 	box-shadow: 0px 4px 21px 0px rgba(0, 0, 0, 13%);
+}
+
+#portal {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	/* z-index: 555; */
+	top: 0;
+	overflow-y: hidden;
+}
+
+.modal-movie {
+	position: relative;
+	z-index: 55555;
+	/* overflow-y: scroll; */
+	opacity: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.719);
+	transition: opacity 0.2s ease;
+}
+
+.modal-movie.visible {
+	opacity: 1;
+	transition: opacity 0.2s ease;
+}
+
+.modal-movie .modal-content {
+	padding: 50px;
+	position: relative;
+	/* bottom: 0; */
+	width: 100%;
+	height: 100%;
+	left: 0;
+	z-index: 5555555;
+	overflow-y: scroll;
+	overflow-x: hidden;
+	background-color: white;
+	border-radius: 20px;
+	height: calc(100vh - 40px);
+}
+
+.modal-movie .layer {
+	/* z-index: 5555555; */
+	position: relative;
+	/* background-color: rgba(0, 0, 0, 0.719); */
+	top: 0;
+	width: 100%;
+	height: 40px;
+	cursor: pointer;
 }
